JSAI/error/src/test/resources/base/object_obj-empty.js
var x = {} ;
var i = 0;
for (j in x) {
  print(j);
  i += 1;
}
print(i);

